# Text2SQL-AI-agent

./: .gitignore  README.md  langgraph.json  pyproject.toml
app/: __init__.py  graph.py  main.py  test_structured_output.py
app/Postgre/: classicmodels_postgres.sql  docker-compose.yml
app/docs/: Draft_text2sql_langgraph.md
app/models/: __init__.py
app/models/states/: state.py
app/nodes/: __init__.py  check_sql.py  classify.py  execute_sql.py  generate_answer.py  generate_sql.py  get_schema.py  is_sql_relate.py  normal_response.py
app/tools/: db.py
