[project]
name = "ai-rag-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.3",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langfuse<3.0.0",
    "langgraph>=1.2.4",
    "litellm[proxy]>=1.59.0",
    "numpy>=2.4.6",
    "openai>=2.29.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "sqlalchemy>=2.0.51",
]
